# rtmp_assistant

./: CMakeLists.txt  README.md  logger.hpp  main.cpp  rtmp.cpp  rtmp.h
ui/: CMakeLists.txt  get_rtmp.cpp  get_rtmp.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
